fixed camera size on mobile

--- a/apps/admin/src/App.scss
+++ b/apps/admin/src/App.scss
@@ -15,3 +15,8 @@
 strong {
   font-weight: bold;
 }
+
+.scannerContainer {
+  width: 100vw;
+  max-width: 400px;
+}
